# Practicas-HMI

8_puzzle/: CMakeLists.txt  main.cpp
FTablaPersona/: CMakeLists.txt  CMakeLists.txt.user.80e7d5d  iconcombobox.cpp  iconcombobox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
FTablaPersona/estilos/: estilo.qss
FTablaPersona/persona/: persona.cpp  persona.h  personadelegate.cpp  personadelegate.h  personatablemodel.cpp  personatablemodel.h
FTablaPersona/tabla/: dialogpersona.cpp  dialogpersona.h  dialogpersona.ui  tablewindow.cpp  tablewindow.h  tablewindow.ui
Proyecto_Bola/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.h
Puzzle_8/: Puzzle_8.pro.user.80e7d5d  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
